--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     font-family: Arial, sans-serif;
+    background-color: white;
 }
 
 #board {
