--- a/style.css
+++ b/style.css
@@ -1,26 +1,27 @@
-#main {
-    display: flex;
-    flex-direction: column;
+body {
+    text-align: center;
+
+}
+
+#container {
+    display:flex;
     align-items: center;
-    font-family: Arial, sans-serif;
-    background-color: white;
+    justify-content: center;
 }
 
 #board {
-    display: grid;
-    grid-template-columns: repeat(7, 50px);
-    grid-gap: 5px;
-    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 0px;
+    height: 0px;
+    flex-direction: row;
 }
 
 .cell {
-    width: 50px;
-    height: 50px;
+    width: 48px;
+    height: 48px;
     background-color: lightblue;
     border: 1px solid #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     cursor: pointer;
 }
 
@@ -30,4 +31,9 @@
 
 .yellow {
     background-color: yellow;
+}
+
+#heading {
+    font-family: Arial, sans-serif;
+    text-align: center;
 }
