--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-
+    background-color: black;
 }
 
 #container {
@@ -18,10 +18,11 @@ body {
 }
 
 .cell {
-    width: 48px;
-    height: 48px;
+    width: 46px;
+    height: 46px;
     background-color: lightblue;
-    border: 1px solid #000;
+    border: 2px solid #000000;
+    border-radius: 8px;
     cursor: pointer;
 }
 
@@ -36,4 +37,10 @@ body {
 #heading {
     font-family: Arial, sans-serif;
     text-align: center;
+}
+
+#win {
+    font-family: Arial, sans-serif;
+    font-size: 100px;
+    color: #ffffff;
 }
